--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-spring": "^9.7.3",
     "styled-components": "^6.1.6",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
