--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.2.13",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -21,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-spring": "^9.7.3",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.6",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
@@ -48,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
